Fixed site name overlap header in metallic  skin

--- a/app/skins/canvas/canvases/blue/stylesheet.css
+++ b/app/skins/canvas/canvases/blue/stylesheet.css
@@ -28,6 +28,6 @@ div#header div#search {
     color: gray;
     width: 360px;
     position: relative;
-    margin-top: -40px;
+    margin-top: -10px;
     margin-left: 540px;
 }
