--- a/app/skins/canvas/canvases/greyfloral/stylesheet.css
+++ b/app/skins/canvas/canvases/greyfloral/stylesheet.css
@@ -35,6 +35,6 @@ div#header div#search {
     color: gray;
     width: 360px;
     position: relative;
-    margin-top: -40px;
+    margin-top: -10px;
     margin-left: 540px;
 }
