--- a/app/skins/canvas/canvases/red/stylesheet.css
+++ b/app/skins/canvas/canvases/red/stylesheet.css
@@ -28,7 +28,7 @@ div#header div#search {
     color: gray;
     width: 360px;
     position: relative;
-    margin-top: -40px;
+    margin-top: -10px;
     margin-left: 540px;
 }
 
